# rsc

./: .gitignore  .rusty-hook.toml  Cargo.toml  README.md  index.html  log.txt  out  rsc-46a02fcf8cea74e6.js  rsc-46a02fcf8cea74e6_bg.wasm  rsc-8405d790374d846b.js  rsc-8405d790374d846b_bg.wasm  rusty-hook.toml
.github/workflows/: deploy-gh-pages.yml
assets/: manifest.json  sw.js
src/: app.rs  assembler.rs  debugger.rs  emulator.rs  file.rs  lexer.rs  lib.rs  main.rs  parser.rs  tokenizer.rs  tracing.rs  ui.rs  util.rs
src/debugger/: event.rs  message.rs  state.rs
src/emulator/: assembler.rs  memory.rs  mod.rs  util.rs
src/frontend/: interface.rs  memory.rs  mod.rs  panels.rs
src/ui/: bytecode_viewer.rs  cpu.rs  editor.rs  top.rs  variable_viewer.rs
tests/: selection_sort.txt
