[package]
name = "rustrsc"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
thiserror = "1.0.40"
log = "0.4"
nom = "7.1.3"
dioxus = "0.4.0"
dioxus-web = "0.4.0"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
